加入了/donate 路由

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="WBank是一個安全自動化數字銀行。" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="/static/bc/contract.js" ></script>
     <title>wangtry官網</title>
     <style>
         body {
@@ -302,7 +301,7 @@ header {
 <body>
 
     <header>
-        <h1>泓財數字銀行 WBank</h1>
+        <h1>wangtry官網</h1>
         <nav>
             <a href="#home" onclick="showContent('home')">首頁</a>
             <div class="dropdown">
@@ -313,7 +312,6 @@ header {
                     <a href="#" onclick="showContent('about')">關於</a>
                 </div>
             </div>
-            <a href="/wbank">登入</a>
         </nav>
     </header>
 
