修改我的官網, 改善restTemplate導入問題

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="WBank">
@@ -371,7 +371,6 @@ header {
             document.getElementById('faq-content').style.display = 'none';
             document.getElementById('about-content').style.display = 'none';
             document.querySelector('.features').style.display = 'none';
-            document.querySelector('.user-interface').style.display = 'none';
 
             // 顯示所選的內容區塊
             document.getElementById(id + '-content').style.display = 'block';
